Added the font size style

--- a/Fridge Display.framer/framer/style.css
+++ b/Fridge Display.framer/framer/style.css
@@ -8,10 +8,9 @@
 
 body {
 	background-color: #fff;
-	font: 28px/1em "HanziPen TC";
+	font: 28px/1em "Helvetica";
 	color: gray;
 	overflow: hidden;
-	text-align: center;
 }
 
 a {
